--- a/index.html
+++ b/index.html
@@ -15,6 +15,65 @@
             <li>About</li>
         </ul>
     </nav>
+
+    <div class="container">
+        
+        <div class="songList">
+            <h1>Best of NCS - No Copyright Sounds</h1></div>
+            <div class="songItemContainer">
+                <div class="songItem">
+                    <img src="covers\1.jpg" alt="1">
+                    <span>Song 1</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="covers\1.jpg" alt="1">
+                    <span>Song 1</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="covers\1.jpg" alt="1">
+                    <span>Song 1</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="covers\1.jpg" alt="1">
+                    <span>Song 1</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="covers\1.jpg" alt="1">
+                    <span>Song 1</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="covers\1.jpg" alt="1">
+                    <span>Song 1</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="covers\1.jpg" alt="1">
+                    <span>Song 1</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
+                </div>
+            </div>
+        <div class="songBanner"></div>
+    </div>
+
+    <div class="bottom">
+        <input type="range" name="range" id="myProgressBar" min="0" max="100">
+        <div class="icons">
+            <!-- font awesome icons -->
+            <i class="fas fa-3x fa-step-backward"></i>
+            <i class="far fa-3x fa-play-circle"></i>
+            <i class="fas fa-3x fa-step-forward"></i>
+        </div>
+        <div class="songInfo">
+            <img src="playing.gif" width="43px" alt=""> Song 1
+        </div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js" integrity="sha512-fzff82+8pzHnwA1mQ0dzz9/E0B+ZRizq08yZfya66INZBz86qKTCt9MLU0NCNIgaMJCgeyhujhasnFUsYMsi0Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
 </body>
 </html>
