--- a/index.html
+++ b/index.html
@@ -61,15 +61,17 @@
     </div>
 
     <div class="bottom">
-        <input type="range" name="range" id="myProgressBar" min="0" max="100">
+        <input type="range" name="range" id="myProgressBar" min="0" max="100" value="0">
         <div class="icons">
             <!-- font awesome icons -->
             <i class="fas fa-3x fa-step-backward"></i>
-            <i class="far fa-3x fa-play-circle"></i>
+            <button id="playBtn">
+                <i class="far fa-3x fa-play-circle" id="masterPlay"></i>
+            </button>
             <i class="fas fa-3x fa-step-forward"></i>
         </div>
         <div class="songInfo">
-            <img src="playing.gif" width="43px" alt=""> Song 1
+            <img src="playing.gif" width="43px" alt="" id="gif"> Song 1
         </div>
     </div>
 
