--- a/index.html
+++ b/index.html
@@ -23,38 +23,23 @@
             <div class="songItemContainer">
                 <div class="songItem">
                     <img src="covers\1.jpg" alt="1">
-                    <span>Song 1</span>
-                    <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
+                    <span class="songName">Song 1</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <button class="songItemPlayBtn" ><i class="far fa-play-circle songItemPlay" id='0'></i></button></span></span>
                 </div>
                 <div class="songItem">
-                    <img src="covers\1.jpg" alt="1">
-                    <span>Song 1</span>
-                    <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
+                    <img src="covers\2.jpg" alt="1">
+                    <span class="songName">Song 2</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <button class="songItemPlayBtn" ><i class="far fa-play-circle songItemPlay" id='1'></i></button></span></span>
                 </div>
                 <div class="songItem">
-                    <img src="covers\1.jpg" alt="1">
-                    <span>Song 1</span>
-                    <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
+                    <img src="covers\3.jpg" alt="1">
+                    <span class="songName">Song 3</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <button class="songItemPlayBtn" ><i class="far fa-play-circle songItemPlay" id='2'></i></button></span></span>
                 </div>
                 <div class="songItem">
-                    <img src="covers\1.jpg" alt="1">
-                    <span>Song 1</span>
-                    <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
-                </div>
-                <div class="songItem">
-                    <img src="covers\1.jpg" alt="1">
-                    <span>Song 1</span>
-                    <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
-                </div>
-                <div class="songItem">
-                    <img src="covers\1.jpg" alt="1">
-                    <span>Song 1</span>
-                    <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
-                </div>
-                <div class="songItem">
-                    <img src="covers\1.jpg" alt="1">
-                    <span>Song 1</span>
-                    <span class="songlistplay"><span class="timestamp">05:34 <i class="far fa-play-circle"></i></span></span>
+                    <img src="covers\4.jpg" alt="1">
+                    <span class="songName">Song 4</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <button class="songItemPlayBtn" ><i class="far fa-play-circle songItemPlay" id='3'></i></button></span></span>
                 </div>
             </div>
         <div class="songBanner"></div>
@@ -64,14 +49,18 @@
         <input type="range" name="range" id="myProgressBar" min="0" max="100" value="0">
         <div class="icons">
             <!-- font awesome icons -->
-            <i class="fas fa-3x fa-step-backward"></i>
-            <button id="playBtn">
-                <i class="far fa-3x fa-play-circle" id="masterPlay"></i>
+            <button id="previous">
+                <i class="fas fa-3x fa-step-backward"></i>
             </button>
-            <i class="fas fa-3x fa-step-forward"></i>
+            <button id="playBtn">
+                <i class="fas fa-3x fa-play-circle" id="masterPlay"></i>
+            </button>
+            <button id="next">
+                <i class="fas fa-3x fa-step-forward"></i>
+            </button>
         </div>
         <div class="songInfo">
-            <img src="playing.gif" width="43px" alt="" id="gif"> Song 1
+            <img src="playing.gif" width="43px" alt="" id="gif"> <span id="bottomName">Song 1</span>
         </div>
     </div>
 
